css/popup.css
/* ... */
.facebook-icon {
    width: 18px;
}

.instagram-icon:hover {
    fill: rgb(200, 55, 171);
}

.pinterest-icon:hover {
    fill: #BD081C;
}

.github-icon:hover {
    fill: #0361cc;
}

.twitter-icon:hover {
    fill: rgb(29, 161, 242);
}

.google-plus-icon:hover {
    fill: rgb(219, 68, 55);
}

.telegram-icon:hover {
    fill: #1e96c8;
}

.facebook-icon:hover {
    fill: rgb(59, 89, 152);
}

.bug-report-icon {
    width: 24px;
}

.bug-report-icon:hover {
    fill: #B71C1C;
}

.donate-icon {
    width: 24px;
    z-index: 1000;
    position: relative;
}

.donate-icon:hover {
    fill: #1A237E;
}

.rate-icon {
    width: 28px;
}

.rate-icon:hover {
    fill: #F57F17;
}

.translate-icon {
    width: 22px;
}

.translate-icon:hover {
    fill: #004D40;
}

.email-icon {
    width: 24px;
}

.email-icon:hover {
    fill: #1A237E;
}

.change-log-icon {
    width: 24px;
}

.change-log-icon:hover {
    fill: #1B5E20;
}

#change-log-link > a:after {
    --ml-ignore:true;
    position: fixed;
    display: block;
    right: 4px;
    bottom: 21px;
    content: "\1F899";
    pointer-events: none;
    text-shadow: none;
    color: var(--ml-main-link-color);
}
html[ml-platform="mobile"] #change-log-link > a:after {
    right: 1px;
    bottom: 16px;
    content: "\2B06";
    pointer-events: none;
}
#change-log-link > a:visited:after {
    color: var(--ml-footer-background-color)!important;
}
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) #change-log-link:not(#imp):not(.imp)>a:visited:after {
    color: var(--ml-main-alt-background-color)!important;
}

#donate-link > a {
    position: relative;
}
#donate-link > a:after {
    --ml-ignore:true;
    position: absolute;
    height: 16px;
    right: 36px;
    bottom: 4px;
    content: attr(marker);
    text-shadow: none;
    color: var(--ml-main-link-color, var(--light-color));
    background-color: var(--ml-main-button-background-color, var(--dark-background-color));
    border: solid 1px var(--ml-main-border-color, var(--light-thin-border-color));
    border-radius: 3px;
    padding: 3px 6px;
    font-size: 13px;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 300px;
}
#donate-link > a:hover:after {
    content: attr(notice);
}
#donate-link > a:before {
    --ml-ignore:true;
    content: "";
    position: absolute;
    width: 14px;
    height: 14px;
    right: 29px;
    bottom: 8px;
    background-color: var(--ml-main-button-background-color, var(--dark-background-color));
    border: 1px solid var(--ml-main-border-color, var(--light-thin-border-color));
    border-bottom-color: transparent!important;
    border-left-color: transparent!important;
    --w: 16px;
    --b: 1px;
    --p: 20%;
    clip-path: polygon(
        var(--b) var(--p),
        var(--b) var(--b),
        0 0, 100% 0, var(--w) var(--w),
        calc(var(--w) - var(--b)) calc(var(--w) - var(--b)),
        calc(var(--w) - var(--p)) calc(var(--w) - var(--b))
    );
    transform: rotate(45deg);
    z-index: 100;
}
#donate-link > a:visited:before ,
#donate-link > a:visited:after {
    border-color: var(--ml-footer-background-color);
    background-color: var(--ml-footer-background-color);
    color: var(--ml-footer-background-color)!important;
}
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) #donate-link > a:not(#imp):not(.imp):visited:before,
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) #donate-link > a:not(#imp):not(.imp):visited:after {
    border-color: var(--ml-main-alt-background-color)!important;
    background-color: var(--ml-main-alt-background-color)!important;
    color: var(--ml-main-alt-background-color)!important;
}

#donate-link > a:before,
#donate-link > a:after {
    display: none;
}

html:not([ml-color-scheme="default"]) #donate-link > a:before,
html:not([ml-color-scheme="default"]) #donate-link > a:after {
    display: block;
}

#linkHue,
#textHue,
#visitedHue,
#txtSelHue,
#backgroundHue,
#buttonHue,
#scrollbarHue,
#scrollbarHue rect,
#borderHue,
#colorSchemeForEdit option,
#colorScheme option {
    --ml-ignore:true;
}

#default-tab-content.ml-tab-content q {
    --ml-text-color:HighlightedText;
}

img.ml-image-example {
    height: 148px;
}

.ml-image-example {
    width: 264px;
    height: 120px;
    margin: 7px calc((100% - 264px)/2) 0px calc((100% - 264px)/2);
}

.ml-bg-example
{
    height: 45px;
    width: 264px;
    margin: 7px calc((100% - 264px)/2) 0px calc((100% - 264px)/2);
    border-width: 0px;
    border-spacing: 0px;
    cursor: help;
}

.ml-bg-example tr:nth-of-type(1) td,
.ml-bg-example tr:nth-of-type(2) td 
{
    width: 24px;
    text-align: center;
    font: 400 11px Arial;
    height: 20px;
}

.ml-bg-example tr:nth-of-type(2) td 
{
    --ml-background-background-color:BackgroundNoContrast;
}

.ml-bg-example td:nth-of-type(1) {
    background-color: hsl(0,0%,50%);
}

.ml-bg-example td:nth-of-type(2) {
    background-color: hsl(0,100%,50%);
}

.ml-bg-example td:nth-of-type(3) {
    background-color: hsl(40,100%,50%);
}

.ml-bg-example td:nth-of-type(4) {
    background-color: hsl(80,100%,50%);
}

.ml-bg-example td:nth-of-type(5) {
    background-color: hsl(120,100%,50%);
}

.ml-bg-example td:nth-of-type(6) {
    background-color: hsl(160,100%,50%);
}

.ml-bg-example td:nth-of-type(7) {
    background-color: hsl(200,100%,50%);
}

.ml-bg-example td:nth-of-type(8) {
    background-color: hsl(240,100%,50%);
}

.ml-bg-example td:nth-of-type(9) {
    background-color: hsl(280,100%,50%);
}

.ml-bg-example td:nth-of-type(10) {
    background-color: hsl(320,100%,50%);
}

.ml-small-bg-image-example
{
    width: 264px;
    margin: 7px calc((100% - 264px)/2) 0px calc((100% - 264px)/2);
    text-align: justify;
    cursor: help;
}

.ml-small-bg-image-example span {
    width: 18px;
    height: 18px;
    display: inline-block;
    background-size: 18px 18px;
    background-repeat: no-repeat;
}
/* ... */

